frontend/src/assets/global.css
@import url("https://fonts.cdnfonts.com/css/din-pro"); /* DINpro */
@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"); /* Noto Sans */

body {
  background-image: url("./hero-clouds.png");
  background-size: cover;
  /*centered on x, starting 56px lower than top for y so that the navbar doesn't cover image*/
  background-position: center 56px;
  background-repeat: no-repeat;
  height: 100vh;
}

/* COLORS */
:root {
  --cyan: #00ffff;
  --muted-cyan: #82ecec;
  --lavender: #b6a1c4;
  --light-lavender: #ded2e5;
  --rose: #ff7bac;
  --white: #ffffff;
  --black: #000000;
  --asphalt-grey: #2d2d2d;
  --charcoal-grey: #464343;
}

h1,
h2,
h3,
h4,
h5 {
  font-family: "DIN Pro", sans-serif;
  font-weight: bold;
}

/* Header 1 */
h1 {
  line-height: 1.5;
  font-size: 3em;
  color: var(--black);
}

/* Header 4 */
h4 {
  /* Positioning */
  text-align: center;
  margin: 0px;
  /* Font Styling */
  font-weight: bold;
  font-style: normal;
  font-size: 1.5em;
  padding-bottom: 1em;

  color: var(--black);
}

/* Body 2 */
.body-2 {
  font-family: Noto Sans;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;
}

.purple-text {
  color: var(--lavender);
  padding-left: 5rem;
  padding-right: 5rem;
}

.center {
  height: 90vh;
  align-items: center;
  justify-content: center;
  display: flex;
}

